# chess

./: CMakeLists.txt
src/: UI.cpp  UI.h  field.cpp  field.h  figure.cpp  figure.h  main.cpp
